--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 
 
         <p class="view"><a href="https://github.com/mrizzoli">View My GitHub Profile</a></p>
-
+        <p class="view"><a href="https://github.com/mrizzoli/notes_src">View My Notebook</a></p>
+        <p class="view"><a href="https://github.com/mrizzoli/tesi">View my MA Thesis</a></p>
       </header>
       <section>
         <h3>
