--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div class="wrapper">
+<div class="container-fluid">
   <div class="col-md-4">
     <header>
       <h1>Mrizzoli.GitHub.io</h1>
@@ -11,7 +11,7 @@ layout: default
       <p class="view"><a href="http://mrizzoli.github.io/tesi">View my MA Thesis</a></p>
     </header>
   </div>
-  <div class="col-md-7">
+  <div class="col-md-8">
     <section>
       <h3>
         <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
