--- a/index.html
+++ b/index.html
@@ -16,5 +16,111 @@ layout: default
       <h3><a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
         <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
    </section>
+    <section id="curriculum">
+      <h1 id="experience">Experience</h1>
+      <table>
+        <colgroup>
+          <col width="13%" />
+          <col width="86%" />
+        </colgroup>
+        <tbody>
+          <tr class="odd">
+            <td align="left"><em>Current</em></td>
+            <td align="left">Teorema Bologna srl <em>Fiscal and Taxation Services</em></td>
+          </tr>
+          <tr class="even">
+            <td align="left">Fall 2015</td>
+            <td align="left">Life Onlus NGO <em>Research on Islamic Reformist Thought, Gender Equality and Intercultural Dialogue</em></td>
+          </tr>
+          <tr class="odd">
+            <td align="left">2006-2008</td>
+            <td align="left">Alma Mater Studiorum - Bologna University, Isiao <em>Archeological research and fieldwork in Kazakhstan and Uzbekhstan</em></td>
+          </tr>
+          <tr class="even">
+            <td align="left">2007</td>
+            <td align="left">Wunderkammer <em>Rescue Archaeology</em></td>
+          </tr>
+          <tr class="odd">
+            <td align="left">2006-2007</td>
+            <td align="left">Lares snc <em>Rescue Archaeology</em></td>
+          </tr>
+        </tbody>
+      </table>
+      <h1 id="education">Education</h1>
+      <table>
+        <tbody>
+          <tr class="odd">
+            <td align="right"><em>Current</em></td>
+            <td align="left">Master of Arts in <span style="font-variant: small-caps;">Asian and African Languages and Cultures</span></td>
+          </tr>
+          <tr class="even">
+            <td align="right"></td>
+            <td align="left"><strong>Alma mater Studiorum - Bologna University</strong>, Bologna</td>
+          </tr>
+          <tr class="odd">
+            <td align="right"><span style="font-variant: small-caps;">Fall</span> 2012</td>
+            <td align="left">Exchange Semester at <strong>Koc University</strong>, Istanbul</td>
+          </tr>
+          <tr class="even">
+            <td align="right"></td>
+            <td align="left"><em>Focus on Modern and Contemporary Turkish Society</em></td>
+          </tr>
+          <tr class="odd">
+            <td align="right"><span style="font-variant: small-caps;">December</span> 2005</td>
+            <td align="left">Bachelor of Arts in <span style="font-variant: small-caps;">Oriental History, Cultures and Civilisation</span>,</td>
+          </tr>
+          <tr class="even">
+            <td align="right"></td>
+            <td align="left"><strong>Alma Mater Studiorum - Bologna University</strong>, Bologna</td>
+          </tr>
+          <tr class="odd">
+            <td align="right"></td>
+            <td align="left">110/110 Major: Indology and Palethnology</td>
+          </tr>
+          <tr class="even">
+            <td align="right"></td>
+            <td align="left">Thesis: ``The M304 Sealing in the Interpretation of Harappan Religion``</td>
+          </tr>
+          <tr class="odd">
+            <td align="right"></td>
+            <td align="left">Advisor: Prof. Laura <span style="font-variant: small-caps;">Piretti</span></td>
+          </tr>
+        </tbody>
+      </table>
+      <h1 id="computer-skills">Computer Skills</h1>
+      <table>
+        <tbody>
+          <tr class="odd">
+            <td align="right">Basic Knowledge:</td>
+            <td align="left"><span style="font-variant: small-caps;">python</span>, <span style="font-variant: small-caps;">html</span>, SQL, OpenOffice, R, <span>LaTeX</span></td>
+          </tr>
+          <tr class="even">
+            <td align="right"></td>
+            <td align="left">ENVI, Google Maps API Javascript</td>
+          </tr>
+          <tr class="odd">
+            <td align="right">Intermediate Knowledge:</td>
+            <td align="left"><span style="font-variant: small-caps;">Linux OS</span>, <span style="font-variant: small-caps;">bash</span>, GRASS, QGis, <span style="font-variant: small-caps;">php</span></td>
+          </tr>
+        </tbody>
+      </table>
+      <h1 id="languages">Languages</h1>
+      <table>
+        <tbody>
+          <tr class="odd">
+            <td align="right"><span style="font-variant: small-caps;">Italian:</span></td>
+            <td align="left">Native</td>
+          </tr>
+          <tr class="even">
+            <td align="right"><span style="font-variant: small-caps;">English:</span></td>
+            <td align="left">CEFR C1</td>
+          </tr>
+          <tr class="odd">
+            <td align="right"><span style="font-variant: small-caps;">Turkish:</span></td>
+            <td align="left">CEFR A2</td>
+          </tr>
+        </tbody>
+      </table>
+    </section>
   </div>
 </div>  
