--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@ layout: default
 ---
 <div class="container-fluid">
   <div class="col-md-8">
+    <section id="my-map">
+      <script src="https://embed.github.com/view/geojson/mrizzoli/notes_src/master/my_geographic
+     _history.json"></script>
+    </section>
     <section id="curriculum">
       <h1 id="experience">Experience</h1>
       <table>
