--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container-fluid">
   <div class="col-md-8">
     <section id="my-map">
-      <script src="https://embed.github.com/view/geojson/mrizzoli/notes_src/master/my_geographic_history.json"></script>
+      <script src="https://embed.github.com/view/geojson/mrizzoli/notes_src/master/my_geographic_history.json?width=1240"></script>
     </section>
     <section id="curriculum">
       <h1 id="experience">Experience</h1>
