--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+published: true
 ---
 <div class="container-fluid">
   <div class="col-md-8">
@@ -40,12 +41,29 @@ layout: default
       <table>
         <tbody>
           <tr class="odd">
-            <td align="right"><em>Current</em></td>
+            <td align="right"><em>March 2015</em></td>
             <td align="left">Master of Arts in <span style="font-variant: small-caps;">Asian and African Languages and Cultures</span></td>
           </tr>
           <tr class="even">
             <td align="right"></td>
             <td align="left"><strong>Alma mater Studiorum - Bologna University</strong>, Bologna</td>
+          </tr>
+          
+          <tr class="odd">
+            <td align="right"></td>
+            <td align="left">110/110 with honors</td>
+          </tr>
+          <tr class="even">
+            <td align="right"></td>
+            <td align="left">Thesis: ``Il Waqf: discontinuità tra diritto hanafita e Impero Ottomano``</td>
+          </tr>
+          <tr class="odd">
+            <td align="right"></td>
+            <td align="left">Advisor: Prof. Giovanni Domenico <span style="font-variant: small-caps;">Benenati</span></td>
+          </tr>
+          <tr class="odd">
+            <td align="right"></td>
+            <td align="left">Coadvisor: Prof. Maurizio Silvio <span style="font-variant: small-caps;">Pistoso</span></td>
           </tr>
           <tr class="odd">
             <td align="right"><span style="font-variant: small-caps;">Fall</span> 2012</td>
@@ -113,4 +131,4 @@ layout: default
       </table>
     </section>
   </div>
-</div>  
+</div>
