--- a/index.html
+++ b/index.html
@@ -41,56 +41,56 @@ published: true
       <table>
         <tbody>
           <tr class="odd">
-            <td align="right"><em>March 2015</em></td>
+            <td align="left"><em>March 2015</em></td>
             <td align="left">Master of Arts in <span style="font-variant: small-caps;">Asian and African Languages and Cultures</span></td>
           </tr>
           <tr class="even">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left"><strong>Alma mater Studiorum - Bologna University</strong>, Bologna</td>
           </tr>
           
           <tr class="odd">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">110/110 with honors</td>
           </tr>
           <tr class="even">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">Thesis: ``Il Waqf: discontinuità tra diritto hanafita e Impero Ottomano``</td>
           </tr>
           <tr class="odd">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">Advisor: Prof. Giovanni Domenico <span style="font-variant: small-caps;">Benenati</span></td>
           </tr>
           <tr class="odd">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">Coadvisor: Prof. Maurizio Silvio <span style="font-variant: small-caps;">Pistoso</span></td>
           </tr>
           <tr class="odd">
-            <td align="right"><span style="font-variant: small-caps;">Fall</span> 2012</td>
+            <td align="left"><span style="font-variant: small-caps;">Fall</span> 2012</td>
             <td align="left">Exchange Semester at <strong>Koc University</strong>, Istanbul</td>
           </tr>
           <tr class="even">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left"><em>Focus on Modern and Contemporary Turkish Society</em></td>
           </tr>
           <tr class="odd">
-            <td align="right"><span style="font-variant: small-caps;">December</span> 2005</td>
+            <td align="left"><span style="font-variant: small-caps;">December</span> 2005</td>
             <td align="left">Bachelor of Arts in <span style="font-variant: small-caps;">Oriental History, Cultures and Civilisation</span>,</td>
           </tr>
           <tr class="even">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left"><strong>Alma Mater Studiorum - Bologna University</strong>, Bologna</td>
           </tr>
           <tr class="odd">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">110/110 Major: Indology and Palethnology</td>
           </tr>
           <tr class="even">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">Thesis: ``The M304 Sealing in the Interpretation of Harappan Religion``</td>
           </tr>
           <tr class="odd">
-            <td align="right"></td>
+            <td align="left"></td>
             <td align="left">Advisor: Prof. Laura <span style="font-variant: small-caps;">Piretti</span></td>
           </tr>
         </tbody>
@@ -99,7 +99,7 @@ published: true
       <table>
         <tbody>
           <tr class="odd">
-            <td align="right">Basic Knowledge:</td>
+            <td align="left">Basic Knowledge:</td>
             <td align="left"><span style="font-variant: small-caps;">python</span>, <span style="font-variant: small-caps;">html</span>, SQL, OpenOffice, R, <span>LaTeX</span></td>
           </tr>
           <tr class="even">
@@ -107,7 +107,7 @@ published: true
             <td align="left">ENVI, Google Maps API Javascript</td>
           </tr>
           <tr class="odd">
-            <td align="right">Intermediate Knowledge:</td>
+            <td align="left">Intermediate Knowledge:</td>
             <td align="left"><span style="font-variant: small-caps;">Linux OS</span>, <span style="font-variant: small-caps;">bash</span>, GRASS, QGis, <span style="font-variant: small-caps;">php</span></td>
           </tr>
         </tbody>
@@ -121,7 +121,7 @@ published: true
           </tr>
           <tr class="even">
             <td align="right"><span style="font-variant: small-caps;">English:</span></td>
-            <td align="left">CEFR C1</td>
+            <td align="left">TOEFL ibt 110</td>
           </tr>
           <tr class="odd">
             <td align="right"><span style="font-variant: small-caps;">Turkish:</span></td>
