--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ published: true
       <table>
         <tbody>
           <tr class="odd">
-            <td align="left"><td align="left"><span style="font-variant: small-caps;">March</span> 2016</td>
+            <td align="left"><span style="font-variant: small-caps;">March</span> 2016</td>
             <td align="left">Master of Arts in <span style="font-variant: small-caps;">Asian and African Languages and Cultures</span></td>
           </tr>
           <tr class="even">
