--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ make-smaller-titles: true
                 <img src="{{ site.title_image }}" class="img-circle about-image" height="150" width="150" alt="{{ site.title }}" />
             </div>
 
-            <h1 class="header author-header" itemprop="headline"><a href="notebook.rizzoli.me.uk">{{ site.title }}</h1></a>
+            <h1 class="header author-header" itemprop="headline"><a href="http://notebook.rizzoli.me.uk">{{ site.title }}</h1></a>
 
             <div class="author-text">
                 {{ site.title_description }}
