--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ make-smaller-titles: true
           <div class="author-text">
 
               <h2>My Geographic History</h2>
-              <script src="https://embed.github.com/view/geojson/mrizzoli/notes_src/master/my_geographic_history.json?width=1240"></script>
+              <script src="https://embed.github.com/view/geojson/mrizzoli/notes_src/master/my_geographic_history.json"></script>
 
           </div>
     </div>
