--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@ make-smaller-titles: true
 
 <div class="map">
 <br />
-  <script src="https://embed.github.com/view/geojson/mrizzoli/notes_src/master/my_geographic_history.json?width=1130"></script>
+  <script src="https://embed.github.com/view/geojson/mrizzoli/mrizzoli.github.io/master/my_geographic_history.json?width=1130"></script>
   
 </div>
