--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@ make-smaller-titles: true
         </div>
       </section>
         <div class="row align-items-end bottom-buttons">
-          <a href="#abstracts" data-scroll><i class="icon fa fa-chevron-down fa-3x"></i></a>
+          <a href="#repos" data-scroll><i class="icon fa fa-angle-down fa-3x"></i></a>
+          <a href="#history" data-scroll><i class="icon fa fa-angle-double-down fa-3x"></i></a>
         </div>
 
-      <section id="abstracts">
+      <section id="repos">
 
         <h2 class="header author-header"> Github Repos </h2>
         {% for repository in site.github.public_repositories %}
@@ -50,7 +51,8 @@ make-smaller-titles: true
         <script src="https://embed.github.com/view/geojson/mrizzoli/mrizzoli.github.io/master/my_geographic_history.json?width=1130"></script>
       </section>
         <div class="row align-items-end bottom-buttons">
-          <a href="#abstracts" data-scroll><i class="icon fa fa-chevron-up fa-3x"></i></a>
+          <a href="#repos" data-scroll><i class="icon fa fa-angle-up fa-3x"></i></a>
+          <a href="#profile" data-scroll><i class="icon fa fa-angle-double-up fa-3x"></i></a>
         </div>
 
     </div>
