--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@ make-smaller-titles: true
         </div>
       </section>
         <div class="row align-items-end bottom-buttons">
-          <a href="#repos" data-scroll><i class="icon fa fa-angle-down fa-3x"></i></a>
-          <a href="#history" data-scroll><i class="icon fa fa-angle-double-down fa-3x"></i></a>
+          <a href="#repos" data-scroll><i class="icon fa fa-angle-double-down fa-3x"></i></a>
         </div>
 
       <section id="repos">
@@ -40,8 +39,8 @@ make-smaller-titles: true
         {% endfor %}
       </section>
         <div class="row align-items-end bottom-buttons fixed-bottom">
-          <a href="#history" data-scroll><i class="icon fa fa-chevron-down fa-3x"></i></a>
-          <a href="#profile" data-scroll><i class="icon fa fa-chevron-up fa-3x"></i></a>
+          <a href="#history" data-scroll><i class="icon fa
+          fa-angle-double-down fa-3x"></i></a>
         </div>
 
       <section id="history">
@@ -51,8 +50,8 @@ make-smaller-titles: true
         <script src="https://embed.github.com/view/geojson/mrizzoli/mrizzoli.github.io/master/my_geographic_history.json?width=1130"></script>
       </section>
         <div class="row align-items-end bottom-buttons">
-          <a href="#repos" data-scroll><i class="icon fa fa-angle-up fa-3x"></i></a>
-          <a href="#profile" data-scroll><i class="icon fa fa-angle-double-up fa-3x"></i></a>
+          <a href="#profile" data-scroll><i class="icon fa
+          fa-angle-double-up fa-3x"></i></a>
         </div>
 
     </div>
