--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ make-smaller-titles: true
           <img src="{{ site.title_image }}" class="img-circle about-image" height="150" width="150" alt="{{ site.title }}" />
         </div>
 
-        <h1 class="header author-header" itemprop="headline"><a href="rizzoli.me.uk">{{ site.title }}</a></h1>
+        <h1 class="header author-header" itemprop="headline"><a href="https://rizzoli.me.uk">{{ site.title }}</a></h1>
 
         <div class="author-text">
           {{ site.title_description }}
